--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@storybook/manager-api": "^8.6.14",
+    "@storybook/theming": "^8.6.14",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
