--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^4.0.1",
     "@eslint/eslintrc": "^3",
     "@storybook/addon-a11y": "^9.0.15",
     "@storybook/addon-docs": "^9.0.15",
@@ -36,7 +36,6 @@
     "eslint-plugin-storybook": "^9.0.15",
     "playwright": "^1.53.2",
     "postcss": "^8.5.6",
-    "storybook": "^9.0.15",
     "tailwindcss": "^4.1.11",
     "typescript": "^5",
     "vitest": "^3.2.4"
