--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.6",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
@@ -24,7 +25,7 @@
     "@storybook/addon-docs": "^9.0.15",
     "@storybook/addon-vitest": "^9.0.15",
     "@storybook/nextjs-vite": "^9.0.15",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -36,7 +37,7 @@
     "eslint-plugin-storybook": "^9.0.15",
     "playwright": "^1.53.2",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5",
     "vitest": "^3.2.4"
   }
